documentation updated with added validation
